Header correction small screen

--- a/_sass/components/_global-header.scss
+++ b/_sass/components/_global-header.scss
@@ -41,7 +41,7 @@
 
     @include screen-size(small) {
         zoom: 1.5;
-        background-color: darken($colour-base, 10%);
+        // background-color: darken($colour-base, 10%);
     }
 
     .icon {
